--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
-		"build:client": "vite build --outDir dist/client",
-		"build:server": "vite build --outDir dist/server --ssr server.ts",
+		"build:client": "vite build",
+		"build:server": "esbuild worker.ts --bundle --minify --loader:.html=text --outfile=dist/_worker.js --format=esm",
+		"build": "npm run build:client && npm run build:server",
 		"preview": "vite preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json"
 	},
@@ -25,6 +25,7 @@
 		"tslib": "^2.4.0",
 		"typescript": "^4.6.4",
 		"vite": "^3.0.0",
-		"worktop": "0.8.0-next.14"
+		"worktop": "0.8.0-next.14",
+		"wrangler": "^2.0.24"
 	}
 }
