--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
 		"vite.config.ts",
 		"kit.ts",
 		"server.ts",
-		"client.ts",
-		"vite-env.d.ts"
+		"routes/client.ts",
+		"vite-env.d.ts",
+		"worker.ts",
+		"dist/manifest.json"
 	]
 }
