--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"build:client": "vite build",
 		"build:server": "esbuild worker.ts --bundle --minify --loader:.html=text --outfile=dist/_worker.js --format=esm",
 		"build": "npm run build:client && npm run build:server",
-		"preview": "vite preview",
+		"preview": "wrangler pages dev dist",
 		"check": "svelte-check --tsconfig ./tsconfig.json"
 	},
 	"devDependencies": {
