feat: :tada: begin again

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,17 @@
 {
-	"extends": "@tsconfig/svelte/tsconfig.json",
+	"extends": "./.svelte-kit/tsconfig.json",
 	"compilerOptions": {
-		"target": "ESNext",
-		"useDefineForClassFields": true,
-		"module": "ESNext",
-		"resolveJsonModule": true,
-		"baseUrl": ".",
 		"allowJs": true,
 		"checkJs": true,
-		"isolatedModules": true,
-		"composite": true,
-		"moduleResolution": "Node",
-		"paths": {
-			"$lib/*": ["lib/*"],
-			"$routes/*": ["routes/*"],
-			"$runtime/*": ["runtime/*"]
-		}
-	},
-	"include": [
-		"routes/**/*.ts",
-		"routes/**/*.svelte",
-		"lib/**/*.ts",
-		"runtime/**/*.ts",
-		"vite.config.ts",
-		"kit.ts",
-		"dev.ts",
-		"routes/client.ts",
-		"vite-env.d.ts",
-		"worker.ts",
-		"dist/client/manifest.json",
-		"dist/client/css.json"
-	]
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"sourceMap": true,
+		"strict": true
+	}
+	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
+	//
+	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
+	// from the referenced tsconfig.json - TypeScript does not merge them in
 }
