--- a/package.json
+++ b/package.json
@@ -1,30 +1,32 @@
 {
 	"name": "svelty",
+	"version": "0.0.1",
 	"private": true,
-	"version": "0.0.0",
-	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
-		"build:client": "vite build --outDir dist/client",
-		"build:worker": "vite build --outDir dist/worker --ssr worker.ts",
-		"build": "rm -rf dist && npm run build:client && npm run build:worker && mkdir -p dist/output && cp -r dist/client/assets dist/output/assets && cp -r dist/worker/worker.js dist/output/_worker.js",
-		"preview": "wrangler pages dev dist/output",
-		"check": "svelte-check --tsconfig ./tsconfig.json"
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --check . && eslint .",
+		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@sveltejs/vite-plugin-svelte": "^1.0.1",
-		"@tsconfig/svelte": "^3.0.0",
-		"@types/express": "^4.17.13",
-		"esbuild": "^0.14.53",
-		"express": "^4.18.1",
-		"modern-normalize": "^1.1.0",
-		"svelte": "^3.49.0",
-		"svelte-check": "^2.8.0",
-		"svelte-preprocess": "^4.10.7",
-		"tslib": "^2.4.0",
-		"typescript": "^4.6.4",
-		"vite": "^3.0.0",
-		"worktop": "0.8.0-next.14",
-		"wrangler": "^2.0.24"
-	}
+		"@sveltejs/adapter-auto": "next",
+		"@sveltejs/kit": "next",
+		"@typescript-eslint/eslint-plugin": "^5.27.0",
+		"@typescript-eslint/parser": "^5.27.0",
+		"eslint": "^8.16.0",
+		"eslint-config-prettier": "^8.3.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"prettier": "^2.6.2",
+		"prettier-plugin-svelte": "^2.7.0",
+		"svelte": "^3.44.0",
+		"svelte-check": "^2.7.1",
+		"svelte-preprocess": "^4.10.6",
+		"tslib": "^2.3.1",
+		"typescript": "^4.7.4",
+		"vite": "^3.1.0"
+	},
+	"type": "module"
 }
