--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
 		"toucan-js": "^2.6.1",
 		"tslib": "^2.3.1",
 		"typescript": "^4.7.4",
-		"vite": "^3.1.0"
+		"vite": "^3.1.0",
+		"yup": "^0.32.11"
 	},
 	"type": "module"
 }
